feature: Реализовать менеджер с сохранением/загрузкой из файла.
refactor: Изменить порядок вывода истории (от новых к старым)